To point where need to add ability to input dates to google flights

--- a/DevNotbook.ipynb
+++ b/DevNotbook.ipynb
@@ -2,44 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class aClass:\n",
-    "\n",
-    "    def __init__(self) -> None:\n",
-    "        print('Constructed')\n",
-    "\n",
-    "    def printStuff(self, stuff: str) -> None:\n",
-    "        print(stuff)"
+    "def print_keys(**kwargs):\n",
+    "    for key in kwargs.keys():\n",
+    "        print(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_class():\n",
-    "    return aClass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Constructed\n"
+      "a\n",
+      "b\n"
      ]
     }
    ],
    "source": [
-    "a = create_class()()\n"
+    "print_keys(**{'a': 0, 'b': 1})"
    ]
   },
   {
