--- a/DevNotbook.ipynb
+++ b/DevNotbook.ipynb
@@ -31,6 +31,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_shit(*args, **kwargs):\n",
+    "    for arg in args:\n",
+    "        print(arg)\n",
+    "    for k, v in kwargs.items():\n",
+    "        print(k, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "c 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_shit(1,2,c=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
